<resources>
    <string name="app_name">Compartilhe Vida</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Configurações</string>
    <string name="title_activity_login">Entrar</string>
    <string name="prompt_email">E-mail...</string>
    <string name="prompt_password">Senha...</string>
    <string name="prompt_confirm_password">Confirmar senha...</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="action_sign_in_facebook">Entrar com o Facebook</string>
    <string name="action_sign_up">Cadastrar</string>
    <string name="error_invalid_email">Esse endereço de e-mail é inválido</string>
    <string name="error_invalid_password">Parece que a senha é muito curta</string>
    <string name="error_incorrect_password">A senha está incorreta</string>
    <string name="error_field_required">Esse campo é obrigarório</string>
    <string name="error_field_idade_menor_16">Você tem que ter no mínimo 16 anos</string>
    <string name="error_field_peso_menor_50">Você tem que ter mais de 50Kg</string>
    <string name="permission_rationale">"Permissões de contados são necessárias para auto-completar o e-mail."
    </string>
    <string name="masculino">Masculino</string>
    <string name="feminino">Feminino</string>
    <string name="cesariana">Cesariana</string>
    <string name="data_da_tatuagem">Data da tatuagem</string>
    <string name="data_da_ultima_doacao">Data da última doação</string>
    <string name="data">dia/mês/ano</string>
    <string name="idade">Idade</string>
    <string name="ja_doou_antes">Já doou antes?</string>
    <string name="ja_esteve_gravida">Já esteve grávida?</string>
    <string name="minha_primeira_doacao_foi_antes_dos_60_anos">Minha primeira doação foi antes dos 60 anos</string>
    <string name="nome">Nome</string>
    <string name="normal">Normal</string>
    <string name="nao_estou_gravida">Não estou grávida</string>
    <string name="nao_possuo_aids">Não possuo AIDS</string>
    <string name="nao_possuo_diabetes">Não possuo Diabetes</string>
    <string name="nao_possuo_doenca_de_chagas">Não possuo Doença de Chagas</string>
    <string name="nao_possuo_htlv_i_ou_ii">Não possuo HTLV I ou II</string>
    <string name="nao_possuo_hepatite_b_ou_c">Não possuo Hepatite B ou C</string>
    <string name="nao_possuo_malaria">Não possuo Malária</string>
    <string name="nao_possuo_sifilis">Não possuo Sífilis</string>
    <string name="nao_uso_drogas_injetaveis">Não uso drogas injetáveis</string>
    <string name="nao">Não</string>
    <string name="peso">Peso</string>
    <string name="sexo">Sexo</string>
    <string name="sim">Sim</string>
    <string name="tatuagem">Tatuagem?</string>
    <string name="tipo_do_parto">Tipo do parto:</string>
    <string name="tipo_sangu_neo">Tipo sanguíneo:</string>
    <string name="compartilhe_vida">Compartilhe Vida</string>
    <string-array name="tipos_sanguineos">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>O+</item>
        <item>O-</item>
    </string-array>
    <string-array name="estados">
        <item>AC</item>
        <item>AL</item>
        <item>AM</item>
        <item>AP</item>
        <item>BA</item>
        <item>CE</item>
        <item>DF</item>
        <item>ES</item>
        <item>GO</item>
        <item>MA</item>
        <item>MT</item>
        <item>MS</item>
        <item>MG</item>
        <item>PA</item>
        <item>PB</item>
        <item>PR</item>
        <item>PE</item>
        <item>PI</item>
        <item>RJ</item>
        <item>RN</item>
        <item>RO</item>
        <item>RS</item>
        <item>RR</item>
        <item>SC</item>
        <item>SE</item>
        <item>SP</item>
        <item>TO</item>
    </string-array>
    <string name="title_activity_saiba_mais">SaibaMaisActivity</string>
    <string name="title_activity_meus_dados">MeusDadosActivity</string>
    <string name="data_do_parto">Data do parto</string>
    <string name="title_activity_cadastro_manual">cadastro_manual</string>
    <string name="cancelar">Cancelar</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="auth_failed">Falha no cadastro, tente novamente mais tarde</string>
    <string name="login_failed_usuarionaoencontrado">Email ou senha incorretos</string>
    <string name="login_success">Entrando...</string>
    <string name="facebook_app_id">326359314404273</string>
    <string name="fb_login_protocol_scheme">fbAPP_ID</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prompt_nome">Nome completo...</string>
    <string name="title_activity_cadastro_campanha">CadastroCampanhaActivity</string>
    <string name="nome_do_beneficiario">Nome do beneficiário</string>
    <string name="cidade">Cidade</string>
    <string name="title_activity_minhas_campanhas">MinhasCampanhasActivity</string>
    <string name="estado">Estado</string>
    <string name="tipo_sanguineo">Tipo sanguíneo</string>
    <string name="some_date">Some date</string>
    <string name="editar">Editar</string>
    <string name="excluir">Excluir</string>
    <string name="compartilhar">Compartilhar</string>
    <string name="alerta">Alerta!</string>
    <string name="alerta_exclusao">A campanha será excluída definitivamente, deseja continuar?</string>
    <string name="imglogo">imgLogo</string>
    <string name="telefone">DDD + Telefone</string>
    <string name="telefone2">Telefone</string>
    <string name="doacao_amamentacao">A doação de sangue é permitida durante a amamentação?</string>
    <string name="hipoglicemia">A hipoglicemia impede a doação?</string>
    <string name="intervalo_entre_doacao">A reposição do volume de plasma ocorre em 24 horas e a dos glóbulos vermelhos em 4 semanas. Entretanto, para o organismo atingir o mesmo nível de estoque de ferro que apresentava antes da doação, são necessárias 8 semanas para homens e 12 semanas para mulheres. Esses são os intervalos mínimos entre doações de sangue.</string>
    <string name="malaria_transfusional">Ainda não há um teste sensível para detecção de malária que possa ser aplicado rotineiramente em bancos de sangue. Por essa razão, excluímos temporariamente os indivíduos que estiveram em zona de malária com o objetivo de diminuir o risco de ocorrência de Malária transfusional.</string>
    <string name="apto_2_semanas_apos_cura">Apto 2 semanas após a cura.</string>
    <string name="historico_convulsao">Candidatos com histórico de convulsão no passado podem doar sangue 03 anos após suspensão do tratamento e sem relato de crise nesse período.</string>
    <string name="cirurgia">Candidatos submetidos a cirurgia de grande porte devem ser recusados de 6 meses a 1 ano. Para cirurgias de pequeno e médio portes, a recusa é por 3 meses. Para cirurgia a laser, aguardar 1 semana após o procedimento, se o local não estiver inflamado. Para cirurgias odontológicas, extração ou manipulação dentária, o prazo é de 7 dias após o procedimento; com anestesia geral, 1 mês após o término de tratamento.</string>
    <string name="armazenado_sangue">Como é armazenado o sangue? Em geladeira? Em que temperatura?</string>
    <string name="menor_idade">De acordo com a legislação brasileira que regulamenta as normas técnicas a serem aplicadas em todos os bancos de sangue do país, o menor de idade poderá doar sangue a partir dos 16 anos. O menor deverá levar uma autorização dos responsáveis legais.</string>
    <string name="piercing_tatuagem">Depois de quanto tempo as pessoas que fizeram piercing, tatuagem ou maquiagem definitiva podem doar sangue?</string>
    <string name="volume_de_sangue">Devido ao volume de anticoagulante presente na bolsa, o que é padronizado para anticoagular no máximo esse volume de sangue.</string>
    <string name="diabetico">Diabético que não pode doar sangue é aquele que chamamos de insulino-dependente; ou seja, aquele que nescessita de insulina para manter seu metabolismo de açúcar próximo da normalidade. Esses pacientes têm importantes alterações do sistema cardiovascular e, em consequência disto, durante ou logo após a doação de sangue, podem apresentar alguma reação que agrave seu estado de saúde.</string>
    <string name="organismo_rempoe_o_sangue_doado">Em quanto tempo o organismo rempõe o sangue doado?</string>
    <string name="hipertireoidismo">Hipo ou Hipertireoidismo impede a doação?</string>
    <string name="menores_de_18_anos_podem_doar">Menores de 18 anos podem doar sangue?</string>
    <string name="doenca_ou_infecao">Na realidade, o termo mais correto seria \"comportamento de risco\"; ou seja, o comportamento do indivíduo que o deixaria mais exposto ao risco de adquirir uma determinada doença ou infecção.</string>
    <string name="atividade_sexual_apos_a_doacao">Não há qualquer contra-indicação para realização de atividade sexual após a doação de sangue ou de plaquetas.</string>
    <string name="nao_caso_estejam_controlados_com_a_medicacao">Não, caso estejam controlados com a medicação.</string>
    <string name="nao_desde_que_o_candidato_esteja_assintomatico_no_dia_da_doacao">Não, desde que o candidato esteja assintomático no dia da doação.</string>
    <string name="amamentacao">Não. A mulher que está amamentando não pode doar sangue, a menos que o parto tenha ocorrido há mais de um ano.</string>
    <string name="folga">O doador de sangue tem direito à folga no trabalho?</string>
    <string name="intervalo_entre_doacoes">O intervalo mínimo entre uma doação de sangue e uma doação de plaquetas é de 56 dias; entre plaquetas e sangue, é de 72 horas. O número máximo de doação de plaquetas, por mês, é de 4 doações; e por ano, 24 doações.</string>
    <string name="o_material_usado_na_coleta_de_sangue_mesmo_seguro">O material usado na coleta de sangue é mesmo seguro?</string>
    <string name="o_volume_de_sangue_total_a_ser_coletado_e_diretamente_ligado_ao_peso_do_doador_para_homens_nao_pode_exceder_a_9ml_kg_peso_e_para_mulheres_8ml_kg_peso_o_anticoagulante_presente_na_bolsa_de_coleta_liga_se_ao_sangue_impedindo_que_este_coagule_o_volume_de_antigoagulante_da_bolsa_e_padronizado_para_um_minimo_de_400ml_de_sangue_logo_uma_pessoa_com_peso_inferior_a_50_kg_nao_pode_doar_o_volume_minimo">O volume de sangue total a ser coletado e diretamente ligado ao peso do doador. Para homens nao pode exceder a 9ml / Kg peso e, para mulheres, 8ml / Kg peso. O anticoagulante presente na bolsa de coleta liga-se ao sangue impedindo que este coagule. O volume de antigoagulante da bolsa e padronizado para um minimo de 400ml de sangue. Logo, uma pessoa com peso inferior a 50 Kg nao pode doar o volume minimo.</string>
    <string name="os_exames_sorol_gicos_s_o_realizados_individualmente">Os exames sorológicos são realizados individualmente?</string>
    <string name="os_gl_bulos_vermelhos_s_o_armazenados_em_geladeira_temperatura_entre_2_e_6_c_as_plaquetas_s_o_armazenadas_em_temperatura_ambiente_entre_20_e_24_c_o_plasma_armazenado_congelado_temperatura_de_18_c_negativos">Os glóbulos vermelhos são armazenados em geladeira, à temperatura entre 2 e 6ºC. As plaquetas são armazenadas em temperatura ambiente entre 20 e 24ºC. O plasma é armazenado congelado à temperatura de 18ºC negativos.</string>
    <string name="pode_se_fazer_sexo_depois_da_doa_o_de_sangue">Pode-se fazer sexo depois da doação de sangue?</string>
    <string name="por_que_com_menos_de_50_kg_n_o_podem_doar_sangue">Por que com menos de 50 Kg não podem doar sangue?</string>
    <string name="por_que_diab_ticos_n_o_podem_doar_sangue">Por que diabéticos não podem doar sangue?</string>
</resources>