<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_editar"
        android:orderInCategory="1"
        android:title="@string/editar"
        app:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_edit" />
    <item
        android:id="@+id/action_excluir"
        android:orderInCategory="2"
        android:title="@string/excluir"
        app:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_delete" />
    <item
        android:id="@+id/action_compartilhar"
        android:orderInCategory="3"
        android:title="@string/compartilhar"
        app:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_share" />
</menu>
