<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_cadastro_manual"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.frcnetto.compartilhevida.activity.CadUsuarioActivity"
    tools:showIn="@layout/activity_cad_usuario">

    <EditText
        android:id="@+id/EdTxEmail"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:textColor="?attr/colorBackgroundFloating"
        android:textColorHint="@android:color/background_light"
        android:backgroundTint="@android:color/white"/>
    <EditText
        android:id="@+id/EdTxSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textSize="@dimen/text_view_size_big"
        android:textColor="?attr/colorBackgroundFloating"
        android:textColorHint="@android:color/background_light"
        android:backgroundTint="@android:color/white"/>
    <EditText
        android:id="@+id/EdTxConfirmSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_confirm_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textColor="?attr/colorBackgroundFloating"
        android:textSize="@dimen/text_view_size_big"
        android:textColorHint="@android:color/background_light"
        android:backgroundTint="@android:color/white"/>

</LinearLayout>
